crates/aranya-policy-compiler/tests/data/match_expr/return_wrong_type_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: string
  |
1 | function f(n int) int {
  |                   --- expected because of this
...
4 |         _ => return "wrong"
  |                     ^^^^^^^ expected `int` but found `string`
